@@ -36,13 +36,15 @@ Version 1.5.0+svn:
  * WML engine:
    * titlescreen is now randomly loaded
    * fix [teleport] capturing villages with the wrong side (bug #11683)
+ * wesnothd
+   * added expiration time to bans
+   * added restart command to server that does gracefull restart
+   * added option to do gracefull shut down for server
  * miscellaneous and bug fixes:
    * fixed issues with campaign info in non-compressed saved games
      (bug #11386)
    * Implemented the option to use the mouse selection clipboard in X11
      the new widget library also uses it.
-   * added restart command to server that does gracefull restart
-   * added option to do gracefull shut down for server
    * fixed multiplayer_connect to handle leave_game command from server
    * improved reloading of game configs after installing or removing addons
    * fixed threading bug in upload_logs
